--- a/backend/package.json
+++ b/backend/package.json
@@ -25,10 +25,12 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
+    "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "firebase-admin": "^12.7.0",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.20.0",
     "mongoose": "^7.5.0",
     "nodemailer": "^6.9.4"
   },
