--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "firebase-admin": "^12.7.0",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mongo": "^0.1.0",
     "mongodb": "^6.20.0",
     "mongoose": "^7.5.0",
     "nodemailer": "^6.9.4"
