--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,16 +1,26 @@
 {
-  "name": "login-frontend",
+  "name": "spot-q-frontend",
   "private": true,
   "version": "1.0.0",
   "type": "module",
+  "description": "SPOT-Q Frontend - Quality Control and Process Management System",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+  "keywords": [
+    "quality-control",
+    "manufacturing",
+    "process-management",
+    "react",
+    "vite",
+    "authentication"
+  ],
+  "author": "Sakthi Auto",
+  "license": "MIT",
   "dependencies": {
-    "firebase": "^10.14.0",
     "lucide-react": "^0.544.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
