--- a/package.json
+++ b/package.json
@@ -1,6 +1,31 @@
 {
-  "dependencies": {
-    "firebase": "^12.2.1",
-    "firebase-admin": "^13.5.0"
+  "name": "spot-q",
+  "version": "1.0.0",
+  "description": "SPOT-Q - Quality Control and Process Management System for Manufacturing",
+  "main": "index.js",
+  "scripts": {
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "dev:backend": "cd backend && npm run dev",
+    "dev:frontend": "cd frontend && npm run dev",
+    "build": "cd frontend && npm run build",
+    "start": "cd backend && npm start",
+    "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install"
+  },
+  "keywords": [
+    "quality-control",
+    "manufacturing",
+    "process-management",
+    "authentication",
+    "react",
+    "nodejs",
+    "mongodb"
+  ],
+  "author": "Sakthi Auto",
+  "license": "MIT",
+  "devDependencies": {
+    "concurrently": "^8.2.2"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
