--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon --config ../nodemon.json server.js"
+    "dev": "nodemon --config ../nodemon.json server.js",
+    "seed:admin": "node seedAdmin.js"
   },
   "keywords": [
     "express",
