--- a/backend/package.json
+++ b/backend/package.json
@@ -1,35 +1,57 @@
 {
   "name": "spot-q-backend",
   "version": "1.0.0",
-  "description": "SPOT-Q Backend API",
+  "description": "SPOT-Q Backend API - Quality Control and Production Management System",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon --config ../nodemon.json server.js",
-    "seed:admin": "node seedAdmin.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "nodemonConfig": {
+    "watch": [
+      "server.js",
+      "controllers",
+      "models",
+      "routes",
+      "middleware",
+      "utils"
+    ],
+    "ext": "js,json",
+    "ignore": [
+      "node_modules/**",
+      "*.test.js"
+    ],
+    "env": {
+      "NODE_ENV": "development"
+    },
+    "delay": 1000
   },
   "keywords": [
     "express",
     "mongodb",
+    "mongoose",
+    "rest-api",
     "authentication",
-    "api"
+    "jwt",
+    "quality-control",
+    "production-management"
   ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongo": "^0.1.0",
-    "mongodb": "^6.20.0",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.3.4"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.1.0"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
