--- a/backend/jsconfig.json
+++ b/backend/jsconfig.json
@@ -1,6 +1,19 @@
 {
   "compilerOptions": {
-    "checkJs": false
-  }
+    "module": "commonjs",
+    "target": "ES2020",
+    "checkJs": false,
+    "moduleResolution": "node",
+    "baseUrl": ".",
+    "paths": {
+      "*": ["node_modules/*"]
+    }
+  },
+  "exclude": [
+    "node_modules",
+    "**/node_modules/*"
+  ],
+  "include": [
+    "**/*.js"
+  ]
 }
-
