--- a/backend/package.json
+++ b/backend/package.json
@@ -45,6 +45,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "mongo": "^0.1.0",
     "mongoose": "^8.3.4"
   },
   "devDependencies": {
