--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.544.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.15.0",
     "react-select": "^5.10.2",
     "styled-components": "^6.1.19"
