--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,10 @@
   "description": "SPOT-Q Backend API - Quality Control and Production Management System",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node --no-deprecation server.js",
+    "dev": "nodemon --exec \"node --no-deprecation\" server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "create-admin": "node utils/createAdmin.js"
+    "create-admin": "node --no-deprecation utils/createAdmin.js"
   },
   "nodemonConfig": {
     "watch": [
@@ -47,10 +47,10 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongo": "^0.1.0",
-    "mongoose": "^8.3.4"
+    "mongoose": "^8.19.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.11"
   },
   "engines": {
     "node": ">=18.0.0",
