--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,6 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.15.0",
-    "react-select": "^5.10.2",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
@@ -38,5 +37,10 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "vite": "^4.4.5"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
+
